<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QRContactBook</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
	<string name="menu_qrcode">Read QR-Code</string>
    
    <string name="menu_one">Phone menu</string>
	<string name="menu_one_import_all">Inport all</string>
	<string name="menu_one_settings">Settings</string>
	<string name="menu_one_newcontact">New Contact</string>
	<string name="menu_one_share">Share App</string>
	
	<string name="menu_two">Base menu</string>
	<string name="menu_two_new_contact">New contact</string>
	<string name="menu_two_export_all">Export all</string>
	<string name="menu_two_settings">Settings</string>
	<string name="menu_two_delete_all">Delete all</string>
	
	<string-array name="group_spinner">
    <item>Mobile</item>
    <item>Home</item>
    <item>Work</item>
	</string-array>
	
</resources>
