<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sabd="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/menu_two_find"
        android:title="@string/menu_qrcode"
        android:icon="@android:drawable/ic_menu_search"
        sabd:showAsAction="always" />
    <item
        android:id="@+id/menu_two"
        android:title="@string/menu_two"
        android:icon="@android:drawable/ic_menu_view"
        sabd:showAsAction="collapseActionView" >
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sabd="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/menu_two_qrcode"
        android:title="@string/menu_qrcode"
        android:icon="@android:drawable/ic_menu_search"
        sabd:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_two_export_all"
        android:title="@string/menu_two_export_all"
        android:icon="@android:drawable/ic_menu_share"
        sabd:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_two_delete_all"
        android:title="@string/menu_two_delete_all"
        android:icon="@android:drawable/ic_menu_delete"
        sabd:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_two_settings"
        android:title="@string/menu_two_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        sabd:showAsAction="never" />
</menu>
</item>
</menu>